--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -55,3 +55,14 @@ Header
 header nav {
 
 }
+
+
+/* ---------------------------------------------------------------
+Contact
+--------------------------------------------------------------- */
+
+#map {
+  height: 400px;  /* The height is 400 pixels */
+  width: 100%;  /* The width is the width of the web page */
+
+}
